Mensaje del commit

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola soy etel, que vara mas loca
+        Hola soy etel, que vara mas loca gib
     </p>
 </body>
 </html>
