Actualización de index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola soy etel, que vara mas loca gib
+        Hola soy etel, que vara mas loca gib3 el 20 feb
     </p>
 </body>
 </html>
